added event handlers, additional entities, services for item, itemPrice, customer, invoice, payment etc